search div spacing fix

--- a/static/css/page-layouts/content-header.css
+++ b/static/css/page-layouts/content-header.css
@@ -104,7 +104,7 @@
     border-radius: 3px;
     flex: 1 1 0px;
     top: 12px;
-    left: 330px;
+    left: 320px;
     right: 72px;
     width: calc(100vw - 370px);
 }
